Unreleased
	* jug.backend.file_store: Special case saving polars DataFrames for speed
	* jug.backend.dict_store: Fix for Python 3
	* jug.task: fix describe for Python 3

Version 2.4.0 Thu 8 May 2025 by luispedro
	* Tasklet: Support for lambda functions in Tasklets
	* pack: bugfix when using local imports
	* jug: better error detection for permission problems
	* jug.unsafe: Add NoHash
	* internal: convert to pyproject.toml for building
	* jug.file_store: create files with better permissions

Version 2.3.1 Sun 5 November 2023 by luispedro
	* jug: update for Python 3.12

Version 2.3.0 Tue 25 June 2023 by luispedro
	* jug shell: Add `get_filtered_tasks()`
	* jug: Fix `jug --version` (which had been broken in the refactoring to
	use subcommands)
	* jug shell: Fix message in jug shell when there are no dependencies (it
	would repeatedly print the message stating "this will only be run once")
	* jug pack: Make it much faster to invalidate elements
	* file_store: ensure that the temporary directory exists
	* jug: Drops support for Python 3.4

Version 2.2.3 Tue 26 May 2023 by luispedro
	* jug shell: Fix for newer versions of IPython

Version 2.2.2 Tue 19 Jul 2022 by luispedro
	* Fix `jug cleanup` when packs are used (`jug pack`)

Version 2.2.1 Thu 19 May 2022 by luispedro
	* Fix `jug cleanup` for redis backend

Version 2.2.0 Tue 3 May 2022 by luispedro
	* Add `jug pack` subcommand
	* Remove six dependency
	* Make get_tasks() return a copy of the tasks

Version 2.1.1 Thu 18 Mar 2021 by luispedro
	* Include requirements files in distribution

Version 2.1.0 Thu 18 Mar 2021 by luispedro
	* Improvements to webstatus (by Robert Denham)
	* Removed Python 2.7 support
	* Fix output encoding for Python 3.8
	* Fix bug mixing mapreduce() & status --cache
	* Make block_access (used in mapreduce()) much faster (20x)
	* Fix important redis bug
	* More precise output in `cleanup` command

Version 2.0.2 Thu Jun 11 2020 by luispedro
	* Fix jug argument parsing
